# Tec-EstructuraDatos-Algoritmos-Feb-Jun-2021

./: CMakeLists.txt  README.md  main.cpp
Act-Integradora-2/: DoubleLinkedList_Server.cpp  DoubleLinkedList_Server.h  Node_Integradora_2.cpp  Node_Integradora_2.h  ServerLog_Integradora_2.cpp  ServerLog_Integradora_2.h  main_integradora_2.cpp
Act-Integradora-3/: HeapAct.cpp  HeapAct.h  LogAct.cpp  LogAct.h  main_heap_act3.cpp
Act-Integradora-4/: Graph.cpp  Graph.h  GraphNode.cpp  GraphNode.h  Heap_2.cpp  Heap_2.h  main.cpp
Act_Integradora_1_ServerLogs/: Server.cpp  Server.h  ServerLog.cpp  ServerLog.h  integradora_1_main.cpp
Clase-1/: Example.cpp  Example.h  exampleMain.cpp
DoubleLinkedList/: DoubleLinkedList.h  Node.h  doubleLinked_main.cpp
Graph/: Graph_2.cpp  Graph_2.h  main_graph.cpp
Graph_Algorithms_Incomplete/: Graph_alg.cpp  Graph_alg.h  main_graphAlg.cpp
Heap_classAct/: heap.cpp  heap.h  heap_main.cpp
LinkedList_Act.Ind/: LinkedList.h  Node.h  linkedlist_main.cpp
QuickSort_IndAct/: Sort.h  quicksort_act.cpp
Recursion_Act.Ind/: Bacteria.cpp  Bacteria.h  Fibonacci.cpp  Fibonacci.h  Interes.cpp  Interes.h  Potencia.cpp  Potencia.h  main_recursion.cpp
Recursion_ClassAct/: Recursion.cpp  Recursion.h
SearchAlgorithms_Act.Ind/: search_main_act.cpp
SearchAlgorithms_ClassAct/: ClassAct_Selection_Bubble.cpp  search_main.cpp
Sorting_Algorithms/: replitProfe.cpp  swap_selection_bubble_insertion_mergealgorithms.cpp
Templates_Activity_CarlaO/: Lista.cpp  Lista.h  act_main.cpp
Templates_ClassAct/: TemplateClassExample.cpp  exampleMain.cpp
(+9 files in other folders)
